--- a/index.html
+++ b/index.html
@@ -615,6 +615,8 @@ Error message and password prompt
 
 <li>מרק כתום בסיר גדול</li>
 
+<li>משנים</li>
+
 <li>משפחת באומן</li>
 
 <li>משפצים ובונים רהיטים</li>
@@ -664,6 +666,8 @@ Error message and password prompt
 <li>עוגת מוקה</li>
 
 <li>עוגת פרג שוקולד</li>
+
+<li>עוגת שזיפים</li>
 
 <li>עורכת הדין</li>
 
@@ -8644,10 +8648,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20170731000457755" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20170802204454095" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20170731000501079" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20170802204455462" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8656,7 +8660,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[פינה באוש]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="משנים [[עוגת שזיפים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8676,7 +8680,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170802142132504" title="$:/temp/search">
+<div created="20161023184814872" modified="20170802165304803" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11182,20 +11186,21 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 התלבטתי לגבי [[וויקליף|http://www.imdb.com/name/nm0419889/]], כי הוא גם [[פוליטיקאי]], שזה סוג של [[wrong livelihood|https://en.wikipedia.org/wiki/Noble_Eightfold_Path]], אך יחד עם זה הוא היה עם [[לורינוש|לורין היל]] [[בפוג'יז|http://www.imdb.com/name/nm2131536/?ref_=nm_ov_bio_lk2]]</pre>
 </div>
-<div created="20170606183630416" modified="20170630190410796" tags="[[אחיות חוץ]]" title="וינסנט ואן-גוך">
+<div created="20170606183630416" modified="20170802233741305" tags="[[אחיות חוץ]]" title="וינסנט ואן-גוך">
 <pre>[img[pictures/van-goch.jpg]]
 
 !!![[גורה]]:
 
 כן, מבחינת גובה האילן, אני מרשה לעצמי לכלול את [[וינסנט היקר|https://he.wikipedia.org/wiki/%D7%95%D7%99%D7%A0%D7%A1%D7%A0%D7%98_%D7%95%D7%90%D7%9F_%D7%92%D7%95%D7%9A]] ברשימת [[אחיות החוץ|אחיות חוץ]]. [[אנחנו|האחיות כהן]] אוהבות להתלות [[באילנות גבוהים|http://www.vangoghgallery.com/index.html]].
 
-כמו כן שמתי כאן ציור אישי שלי, ובענווה, כדי להגיד - ואן גוך [[ממש גרם לי|עם יויו באמסטרדם]] לרצות לצייר.
+כמו כן הרשיתי לעצמי לצייר אותו, ובענווה, כדי להגיד - ואן גוך [[ממש גרם לי|עם יויו באמסטרדם]] לרצות לצייר.
 
-ציירתי את החדר שלי הענקי - בו נשארתי לבד אחרי [[שדןדן נסע|דןדן נסע]], ורוקנתי אותו כמעט לגמרי.
+אחרי [[שדןדן נסע|דןדן נסע]] נשארתי לבד בחדרי הענקי, [[ורוקנתי אותו|משנים]] כמעט לגמרי.
 
-בחלק שאחרי גב השידה, העמדתי שולחן ענקי, שאלפרד ודןדן בנו. על השולחן נמצא המחשב, בלוקי ציור, עפרונות ציור וכד'. 
+הכנסתי לחדר שולחן ענקי, שאלפרד ודןדן בנו. על השולחן נמצא המחשב, בלוקי ציור, עפרונות ציור וכד'. 
 
 אם אני זקוקה למשהו אני שולחת לחברים הודעה [[באתרפאד|http://etherpad.org/]].
+
 
 
 </pre>
@@ -12175,6 +12180,18 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20170802165524913" modified="20170802234536583" tags="[[נאמני הגנזך]]" title="משנים">
+<pre>[img[pictures/meshanim.jpg]]
+
+!!![[גורה]]:
+
+נטייה נוספת שיש ליויו ולי היא הנטייה להזיז דברים בבית, בטח ברגעים מזעזעים כמו [[הנסיעה|דןדן נסע]] של דןדן.
+
+השארתי בצד אחד של החדר מיטה וכמה רהיטים ובחציו השני שמתי שולחן ענקי עם המחשב ודפים ועפרונות צבעוניים, ואני מתרכזת.
+
+
+</pre>
+</div>
 <div created="20170608171939614" modified="20170608212601085" title="משפחת באומן">
 <pre>[img[pictures/baumans.jpg]]
 
@@ -12637,6 +12654,41 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 9. מוכנה להגשה כשעה לאחר תום האפייה, וטעימה גם כשקרה.</pre>
 </div>
+<div created="20170802173415690" modified="20170802234356367" tags="[[כשהם ישנים]]" title="עוגת שזיפים">
+<pre>[img[pictures/ugat-shezifim.jpg]]
+
+החומרים:
+
+* 300 גרם חמאה רכה
+*כוס סוכר
+*שקית סוכר וניל
+*4 ביצים
+*שתי כפות שמנת חמוצה
+* כוס ו-1/2 קמח
+* כפית אבקת אפייה
+*60 גרם שקדים טחונים (קמח שקדים)
+
+* שמונה שזיפים בשלים אך לא מידי, שטופים ופרוסים לפרוסות לא עבות מעורבבים עם כפית סוכר
+* 3/4 כוס שקדים טחונים
+
+אופן ההכנה:
+
+1. מחממים תנור ל160 מעלות ומכינים שלוש תבניות צרות ונמוכות 
+
+2. בוו הגיטרה של המיקסר מערבלים את החמאה, הסוכר וסוכר הוניל עד למשחה חלקה
+
+3.מוסיפים את שאר החומרים ולשים עד שהתערובת חלקה
+
+4. יוצקים לשלוש תבניות מאורכות ונמוכות.
+
+5. מסדרים את פרוסות השזיפים
+
+6. מפזרים בצורה אחידה פרורי שקדים מעל
+
+7. אופים 25-35 דקות - עד שהעוגות מזהיבות.
+
+</pre>
+</div>
 <div created="20170319172108447" modified="20170507182033195" tags="HH" title="עורכת הדין">
 <pre>[img[pictures/4kRbQgdyhAC1bAb3.jpg]]
 
@@ -12738,7 +12790,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170601232601606" modified="20170606192626683" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="עם יויו באמסטרדם">
+<div created="20170601232601606" modified="20170802204424275" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="עם יויו באמסטרדם">
 <pre>[img[pictures/amsterdam-im-yoyo.jpg]]
 
 !!![[גורה]]:
@@ -12747,7 +12799,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אין מה לבוא לאדם בטענות על כך שהלך, זה מותר, לכל הצדדים. כן, צריכים להיות הגונים, כל הצדדים, גם מי שנשאר כועס, צריך להיות הוגן והגון - כנראה שקודם כל עם עצמו.
 
-היה קר, הסתובבנו מעט, דיברנו הרבה, לנו סמוך [[לוונדלפארק|https://en.wikipedia.org/wiki/Vondelpark]] ולאזור המוזיאונים. המקום היחידי שממש רציתי לבקר בו היה [[מוזיאון ואן-גוך|https://en.wikipedia.org/wiki/Van_Gogh_Museum]]. פרט [[לכאב המכאיב|וינסנט ואן-גוך]] המורגש בציוריו של וינסנט היקר, שיושב ומצייר עוד ועוד, את עצמו, את בית הוריו, את הטבע, את האנשים, ובתור אדם שמצא נתיב בריחה לכאביו בכתיבה, קינאתי באפשרות להעביר תמונה שלימה בלי להזדקק למילים.
+היה קר, הסתובבנו מעט, דיברנו הרבה, לנו סמוך [[לוונדלפארק|https://en.wikipedia.org/wiki/Vondelpark]] ולאזור המוזיאונים. המקום היחידי שממש רציתי לבקר בו היה [[מוזיאון ואן-גוך|https://en.wikipedia.org/wiki/Van_Gogh_Museum]]. פרט [[לכאב המכאיב|וינסנט ואן-גוך]] המורגש בציוריו של וינסנט היקר, שיושב ומצייר עוד ועוד, את עצמו, את בית הוריו, את הטבע, את האנשים, וכואב ללא סוף, כבר זמן מה שקינאתי, (בקטע טוב), באפשרות להעביר תמונה שלימה בלי להזדקק למילים.
 
 כמעט ואיבדתי את זה לכמה חודשים, אך [[האתר שלנו|האחיות כהן]] מציל אותי.
 
