--- a/index.html
+++ b/index.html
@@ -8660,7 +8660,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[המטבח על פי ז'נבייב]] [[הספלים מהם אנו שותים]] [[וינסנט ואן-גוך]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[איזדורה דאנקן]] ספירל [[אנט ג'מיימה]] [[מרינה זוטו]] [[פינה באוש]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13294,7 +13294,7 @@ __אופן ההכנה____
 
 את [[פיליפ ז&quot;ל|https://he.wikipedia.org/wiki/%D7%A4%D7%99%D7%9C%D7%99%D7%A4_%D7%A1%D7%99%D7%9E%D7%95%D7%A8_%D7%94%D7%95%D7%A4%D7%9E%D7%9F]].</pre>
 </div>
-<div created="20170801101117385" modified="20170802142854670" tags="[[אחיות חוץ]]" title="פינה באוש">
+<div created="20170801101117385" modified="20170803190115132" tags="[[אחיות חוץ]]" title="פינה באוש">
 <pre>[img[pictures/pina-bausch.jpg]]
 
 !!![[אירי]]:
@@ -13302,7 +13302,7 @@ __אופן ההכנה____
 
 [[זה|https://www.youtube.com/watch?v=LA65HrIMrjs]] למשל, קטע שרקדן של הלהקה הביא לאחר חופשה, [[ונכנס|https://www.youtube.com/watch?v=CIrRR48s5As]] למופע ציפורנים.
 
-[[וזה|https://www.youtube.com/watch?v=WZd2SkydIXA]] מופע שיויו וגורה הכניסו [[ל-HH|HH]] בזמנו - [[קפה מילר]], כמחווה לרקדנית והכוריאוגרפית החשובה, פינה ז&quot;ל.
+[[וזה|https://www.youtube.com/watch?v=WZd2SkydIXA]] מופע שיויו וגורה השתמשו בשמו [[ב-HH|HH]] בזמנו - [[קפה מילר]], כמחווה לרקדנית והכוריאוגרפית החשובה, פינה ז&quot;ל.
 </pre>
 </div>
 <div created="20170405154213420" modified="20170405180055892" tags="[[מתכוני ארוחת הכריסמס]]" title="פלפלים קלויים">
