--- a/index.html
+++ b/index.html
@@ -8660,7 +8660,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[איזדורה דאנקן]] ספירל [[אנט ג'מיימה]] [[מרינה זוטו]] [[פינה באוש]]" title="$:/StoryList">
+<div list="[[עוגת שזיפים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12654,7 +12654,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 9. מוכנה להגשה כשעה לאחר תום האפייה, וטעימה גם כשקרה.</pre>
 </div>
-<div created="20170802173415690" modified="20170802234356367" tags="[[כשהם ישנים]]" title="עוגת שזיפים">
+<div created="20170802173415690" modified="20170804145033414" tags="[[כשהם ישנים]]" title="עוגת שזיפים">
 <pre>[img[pictures/ugat-shezifim.jpg]]
 
 החומרים:
@@ -12675,9 +12675,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 1. מחממים תנור ל160 מעלות ומכינים שלוש תבניות צרות ונמוכות 
 
-2. בוו הגיטרה של המיקסר מערבלים את החמאה, הסוכר וסוכר הוניל עד למשחה חלקה
+2. בוו הגיטרה של המיקסר מערבלים במהירות נמוכה את החמאה, הסוכר וסוכר הוניל עד למשחה חלקה
 
-3.מוסיפים את שאר החומרים ולשים עד שהתערובת חלקה
+3. מוסיפים את שאר החומרים וממשיכים לערבל במהירות נמוכה, עד שהתערובת חלקה
 
 4. יוצקים לשלוש תבניות מאורכות ונמוכות.
 
@@ -12685,7 +12685,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 6. מפזרים בצורה אחידה פרורי שקדים מעל
 
-7. אופים 25-35 דקות - עד שהעוגות מזהיבות.
+7. אופים 25-40 דקות - עד שהעוגות מזהיבות.
 
 </pre>
 </div>
@@ -13294,7 +13294,7 @@ __אופן ההכנה____
 
 את [[פיליפ ז&quot;ל|https://he.wikipedia.org/wiki/%D7%A4%D7%99%D7%9C%D7%99%D7%A4_%D7%A1%D7%99%D7%9E%D7%95%D7%A8_%D7%94%D7%95%D7%A4%D7%9E%D7%9F]].</pre>
 </div>
-<div created="20170801101117385" modified="20170803190115132" tags="[[אחיות חוץ]]" title="פינה באוש">
+<div created="20170801101117385" modified="20170804144705644" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="פינה באוש">
 <pre>[img[pictures/pina-bausch.jpg]]
 
 !!![[אירי]]:
