--- a/index.html
+++ b/index.html
@@ -341,6 +341,8 @@ Error message and password prompt
 
 <li>בצק פריך</li>
 
+<li>ברכת השמש</li>
+
 <li>ג'וזף אברואה</li>
 
 <li>ג'ון אירווינג</li>
@@ -790,6 +792,8 @@ Error message and password prompt
 <li>תפוחי אדמה ובטטות בתנור</li>
 
 <li>תרבות הממשל היפנית</li>
+
+<li>תרגיל לבלטה</li>
 
 <li>תרנגול הודו אפוי</li>
 
@@ -8660,7 +8664,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עוגת שזיפים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ברכת השמש]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8680,7 +8684,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170803113619661" title="$:/temp/search">
+<div created="20161023184814872" modified="20170806154822641" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9391,7 +9395,7 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 
 זאת דנה. והיא כתבה את הסיפורים הללו לפני.</pre>
 </div>
-<div created="20161206200127567" modified="20170729120523099" tags="[[אחות כהן]]" title="אירי">
+<div created="20161206200127567" modified="20170806161148460" tags="[[אחות כהן]]" title="אירי">
 <pre>[img[pictures/iri.jpg]]
 
 !!![[אלפרד]]:
@@ -9411,6 +9415,8 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 2. [[הסיפור שגורה כתבה על אירי, ושנמצא ב&quot;אגב בתוך אגב&quot;|מחפשת את אירי]].
 
 3. [[דיוויד בואי]].
+
+4. [[אירי טוענת]]
 
 
 
@@ -9783,6 +9789,17 @@ Is where I want to be
 
 3.  עוטפים בניילון נצמד ומקררים כחצי שעה.
 </pre>
+</div>
+<div created="20170806152634013" modified="20170806192815033" tags="[[אירי טוענת]]" title="ברכת השמש">
+<pre>[img[pictures/birkat-hashemesh.jpg]]
+
+!!![[אירי]]:
+
+נכחתי לא מעט פעמים בשיעורי יוגה בשיטות שונות, ונשארתי בסוף עם [[ברכת השמש|https://en.wikipedia.org/wiki/Surya_Namaskara]]. הוא תרגיל מצוין, כי הוא עובר דרך הרבה תנועות ושרירים, אך גם אותו הייתי ממליצה לעשות בזהירות, ולתת את הדעת על  הלחצים שיכולים להיווצר בתנועות או תנוחות מסויימות, על [[הצווארים|צווארים]] ובכלל.
+
+[[גם אותו|תרגיל לבלטה]], אני אוהבת לעשות עם מוזיקה, למשל [[זה מה|https://www.youtube.com/watch?v=cM4kqL13jGM]] ששמתי היום, ותודה [[לשמש|https://www.youtube.com/watch?v=CtaUWSdgdHE]].
+
+ </pre>
 </div>
 <div created="20170225204122418" modified="20170522173443649" tags="[[אחות כהן]]" title="ג'וזף אברואה">
 <pre>[img[pictures/jozef.jpg]]
@@ -12654,7 +12671,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 9. מוכנה להגשה כשעה לאחר תום האפייה, וטעימה גם כשקרה.</pre>
 </div>
-<div created="20170802173415690" modified="20170804145033414" tags="[[כשהם ישנים]]" title="עוגת שזיפים">
+<div created="20170802173415690" modified="20170806131133891" tags="[[כשהם ישנים]]" title="עוגת שזיפים">
 <pre>[img[pictures/ugat-shezifim.jpg]]
 
 החומרים:
@@ -12666,8 +12683,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 *שתי כפות שמנת חמוצה
 * כוס ו-1/2 קמח
 * כפית אבקת אפייה
-*60 גרם שקדים טחונים (קמח שקדים)
-
+*60 גרם שקדים טחונים (בחנויות, במדף הקמחים יש קמח שקדים, שהוא, למעשה, שקדים טחונים)
 * שמונה שזיפים בשלים אך לא מידי, שטופים ופרוסים לפרוסות לא עבות מעורבבים עם כפית סוכר
 * 3/4 כוס שקדים טחונים
 
@@ -14231,6 +14247,33 @@ Fapina''
 שמבוססת על הדרך שבה הבינו מנהלים אמריקנים את הדרך שבה הבינו מנהלים יפנים את תרבות הניהול האמריקנית.
 
 //המשך יבוא//</pre>
+</div>
+<div created="20170806142815034" modified="20170806193447873" tags="[[אירי טוענת]]" title="תרגיל לבלטה">
+<pre>[img[pictures/targil-lebalata.jpg]]
+
+!!![[אירי]]:
+
+אני לא אוהבת טכניקה - וטכניקה לא אוהבת אותי, למעט [[טכניקת אלכסנדר|שיטת אלכסנדר]], שדבר ראשון אומרת, להניח לצוואר להיות חופשי.
+
+רקדתי מאז ומתמיד, ולמדתי מחול קלאסי, מחול מודרני, ריקודי עם, כתב תנועה, קומפוזיציה ועוד. הייתה לי מורה לטכניקת [[מרתה גראהם|ספירל]] שקראה לי [[איזדורה דאנקן]]. כשאני מתנועעת, אני נועלת נעלי רחוב עם סוליית גומי, וחושבת אלכסנדרונית. מחשבה שהולכת איתי כבר זמן מה היא, שהמחול נועד לרוקד ולא לצופה.
+
+תמיד אהבתי אטיודים. על תרגיל לבלטה חשבתי לראשונה בהודו, כשגרנו בחדר הקטן, עוד לפני [[הצלילה|מחפשת את אירי]].
+
+הוא מצריך מרחב של 12 בלטות, אך משתמשים רק ב-8 מתוכן.
+
+אפשר עם  או בלי מוזיקה, כפות הרגליים עומדות כל אחת על בלטה, מקבילות זו לזו. הברכיים כפופות מעט ורכות, מפרקי הירך רכים, [[המותנית|צווארים]]. מניחים לצוואר להיות חופשי ומתחילים שני סיבובים, אחד כשרגל ימין נעה קדימה וחוזרת, הצידה ימינה וחוזרת, אחורה וחוזרת, הצידה ימינה וחוזרת (8 פעמות). אחר כך ובאותו אופן ברגל שמאל לצד שמאל.
+
+קל לזכור את התרגיל בדומה לריקודי העם של פעם, כלומר - כמו בדבקה או בהורה, הטקסט ברור, וכל שנותר הוא להתנועע ולאלתר תוך כדי תנועה.
+
+כן או לא להעביר את המשקל לרגל המתנועעת, שינוי המהירות, הוספה של תנועת הידיים. כשהטקסט קצר וברור, אפשר להתעמק בתנועה, במקצב, בקצב, בחשיבה התנועתית ועוד.
+
+התרגיל הזה עובד על היציבה, מחזק את שרירי הגו והירכיים, ואם עושים אותו מספיק זמן רצוף, ובתנועות מהירות, הוא משפר סבולת לב-ריאה. :)
+
+אני אוהבת להשתמש בסוגים שונים של מוזיקה. גם את  [[ברכת השמש]]  אני עושה לצלילי מוזיקה, שהופכת הכל ליותר נעים ומעניין.
+
+בימים האחרונים נהניתי [[מפנטסי|https://www.youtube.com/watch?v=fdBTWbQEQ2s]] של מיילס דייויס, שאיתו כפות הרגליים פלשו לבלטות נוספות.
+
+</pre>
 </div>
 <div created="20170413144306056" modified="20170413203433137" tags="[[מתכוני ארוחת הכריסמס]]" title="תרנגול הודו אפוי">
 <pre>[img[pictures/turkey-cock.jpg]]
