--- a/english.html
+++ b/english.html
@@ -411,6 +411,8 @@ Error message and password prompt
 
 <li>soul</li>
 
+<li>Spike Lee</li>
+
 <li>The archive's trustees</li>
 
 <li>The Baumans</li>
@@ -8322,7 +8324,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Spike Lee]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8887,7 +8889,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
  &lt;&lt;heblink [[כמה שירים כבר אפשר להמציא בכלל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213211047243" modified="20200215103629400" tags="[[Iry and Gura]] [[Monkeys with car keys]] Metafiction [[Menopause sisters]] [[In the Animal Farm]]" title="Hysterical">
+<div created="20200213211047243" modified="20200215104427158" tags="[[Iry and Gura]] [[Monkeys with car keys]] Metafiction [[Menopause sisters]] [[In the Animal Farm]]" title="Hysterical">
 <pre>
 [img[pictures/histeriyot.jpg]]
 
@@ -9294,6 +9296,30 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 
 
  &lt;&lt;heblink [[נשמה]]&gt;&gt;</pre>
+</div>
+<div created="20200215103830870" modified="20200215104607574" tags="[[Outer sisters]] Films" title="Spike Lee">
+<pre>
+
+[img[pictures/spike-lee.jpg]]
+
+!!![[Gura]]:
+
+It was Yoyo, obviously, who introduced me to Spike.
+
+And I say:
+
+1.    [[Y'ALL TAKE A CHILL|https://www.youtube.com/watch?v=H-Jks6rIhMY]]
+
+2.    [[SHE'S GOTTA HAVE IT|https://www.imdb.com/title/tt0091939/?ref_=nmbio_mbio]]
+
+3.    [[DO THE RIGHT THING|https://www.imdb.com/title/tt0097216/?ref_=nmbio_mbio]]
+
+4.    [[25th HOUR|https://www.imdb.com/title/tt0307901/]]
+
+5.    [[BlaKkKlansman|Films]]
+
+ &lt;&lt;heblink [[ספייק לי]]&gt;&gt;
+</pre>
 </div>
 <div created="20200213163836811" modified="20200213165310346" tags="[[How many songs can you even invent at all]] [[The team]] [[The Baumans]] Metafiction [[Monkeys with car keys]]" title="The archive's trustees">
 <pre>[img[pictures/neemaney.jpg]]
