--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[צ'רלי קאופמן]] [[כשהיו כבישים צרים וארוכים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כשהיו כבישים צרים וארוכים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215103353566" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215103858423" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -15167,7 +15167,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170527145749109" modified="20200215103216109" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
+<div created="20170527145749109" modified="20200215104638645" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
 
@@ -15906,7 +15906,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 רוצה לומר, אפשר לסמוך על ג'ימי מק'גיל, שיהפוך [[לסול גודמן|https://www.imdb.com/title/tt3032476/]], ושזו  תהיה אחלה דמות לאחלה סדרה.</pre>
 </div>
-<div created="20170814193959289" modified="20190928160434235" tags="[[אחיות חוץ]] סרטים" title="ספייק לי">
+<div created="20170814193959289" modified="20200215104703990" tags="[[אחיות חוץ]] סרטים" title="ספייק לי">
 <pre>[img[pictures/spike-lee.jpg]]
 
 !!![[גורה]]:
@@ -15925,7 +15925,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 5. [[שחור על לבן|סרטים]]
 
-</pre>
+&lt;&lt;englink [[Spike Lee]]&gt;&gt;</pre>
 </div>
 <div created="20170606204237997" modified="20170801125356471" tags="[[אירי טוענת]]" title="ספירל">
 <pre>[img[pictures/spiral.jpg]]
