--- a/english.html
+++ b/english.html
@@ -421,6 +421,8 @@ Error message and password prompt
 
 <li>The blue is already here</li>
 
+<li>The Bridge</li>
+
 <li>The first assembly</li>
 
 <li>The global village</li>
@@ -8326,7 +8328,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Pedro Almodóvar]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The Bridge]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8346,7 +8348,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215104939571" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215105659968" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8891,7 +8893,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
  &lt;&lt;heblink [[כמה שירים כבר אפשר להמציא בכלל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213211047243" modified="20200215105423508" tags="[[Iry and Gura]] [[Monkeys with car keys]] Metafiction [[Menopause sisters]] [[In the Animal Farm]]" title="Hysterical">
+<div created="20200213211047243" modified="20200215110006803" tags="[[Iry and Gura]] [[Monkeys with car keys]] Metafiction [[Menopause sisters]] [[In the Animal Farm]]" title="Hysterical">
 <pre>
 [img[pictures/histeriyot.jpg]]
 
@@ -9356,6 +9358,20 @@ And I say:
 
 
  &lt;&lt;heblink [[הכחול כבר כאן]]&gt;&gt;</pre>
+</div>
+<div created="20200215105718382" modified="20200215110037644" tags="[[TV Series]] TV" title="The Bridge">
+<pre>
+[img[pictures/hagesher.jpg]]
+
+!!![[Yoyo]]:
+
+Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Norén|https://en.wikipedia.org/wiki/Saga_Nor%C3%A9n]].
+
+
+ &lt;&lt;heblink [[הגשר]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20200202171450477" modified="20200212175928821" tags="[[Monkeys with car keys]]" title="The first assembly">
 <pre>[img[pictures/asefot.jpg]]
