--- a/english.html
+++ b/english.html
@@ -331,8 +331,6 @@ Error message and password prompt
 
 <li>Dreams that we've dreamt</li>
 
-<li>Dreams we have dreamt</li>
-
 <li>Elementary</li>
 
 <li>Ethan and Joel Coen</li>
@@ -8452,10 +8450,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20200216191410466" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20200217121340733" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20200216191411768" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217122942251" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8464,7 +8462,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The global village]] [[Monkeys with car keys]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The global village]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8630,7 +8628,7 @@ a.translation:hover { text-decoration: underline }
 .tootdiv a:hover {text-decoration: none; color: #f88}
 tootdiv a:visited {text-decoration: none; color: #700}</pre>
 </div>
-<div created="20200115163447032" modified="20200115164708559" tags="Metafiction" title="9-side-wishing-star">
+<div created="20200115163447032" modified="20200217121354541" tags="Metafiction [[The global village]]" title="9-side-wishing-star">
 <pre>!!![[Eva]]:
 
 This is a story I wrote in the winter of 2016, it begins with visiting Yoyo and Gura in Paris, for the Christmas dinner 2015 
@@ -8823,7 +8821,7 @@ Is where I want to be
 
  &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
 </div>
-<div created="20200213181607810" modified="20200216185519050" tags="[[On the road to somewhere]] [[Iry and Gura]] [[Dreams we have dreamt]]" title="blue-marble-hood">
+<div created="20200213181607810" modified="20200217121424283" tags="[[On the road to somewhere]] [[Iry and Gura]] [[Dreams we have dreamt]] [[The global village]]" title="blue-marble-hood">
 <pre>[img[pictures/blue-marble.jpg]]
 
 
@@ -9148,17 +9146,13 @@ This is [[David Byrne|http://davidbyrne.com/]].
  &lt;&lt;heblink [[דליקטסן אצל ז'נבייב]]&gt;&gt;
 </pre>
 </div>
-<div created="20200202160144751" modified="20200202161637983" tags="[[The team]] Children" title="Dreams that we've dreamt">
-<pre>[img[pictures/chalomot-shechalamnoo.jpg]]
-
- &lt;&lt;heblink [[חלומות שחלמנו]]&gt;&gt;</pre>
-</div>
-<div created="20200213182904861" modified="20200213183106268" tags="Children [[The team]]" title="Dreams we have dreamt">
+<div created="20200202160144751" modified="20200217121557126" tags="[[The team]] Children" title="Dreams that we've dreamt">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Dreams we have dreamt]]&quot;&gt;&gt;
 
- &lt;&lt;heblink [[jחלומות שחלמנו]]&gt;&gt;</pre>
+
+ &lt;&lt;heblink [[חלומות שחלמנו]]&gt;&gt;</pre>
 </div>
 <div created="20190226092627784" modified="20200212165740061" tags="[[TV Series]] TV" title="Elementary">
 <pre>[img[pictures/elementary.jpg]]
@@ -9202,7 +9196,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
  &lt;&lt;heblink [[אווה כהן]]&gt;&gt;</pre>
 </div>
-<div created="20200215222945436" modified="20200215223116423" tags="[[Iry claims]] [[Monkeys with car keys]] Houses [[On the road to somewhere]]" title="Exile">
+<div created="20200215222945436" modified="20200217121629298" tags="[[Iry claims]] [[Monkeys with car keys]] Houses [[On the road to somewhere]] [[The global village]]" title="Exile">
 <pre>[img[pictures/galoot.jpg]]
 
 
@@ -9342,7 +9336,7 @@ She's one of the lucky fellows who were raised together in a group, who came fro
  &lt;&lt;heblink [[הארי דין סטנטון]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212164615918" modified="20200212164757805" tags="Metafiction [[Outer sisters]]" title="Here in the Ghetto">
+<div created="20200212164615918" modified="20200217121701733" tags="Metafiction [[Outer sisters]] [[The global village]]" title="Here in the Ghetto">
 <pre>[img[pictures/here-in-the-ghetto.jpg]]
 
 
@@ -9454,7 +9448,7 @@ Yes you- killing machines, exterminating and cancelling all that's not in your f
 
 </pre>
 </div>
-<div created="20200212174127022" modified="20200212185553104" tags="Music [[How many songs can you even invent at all]]" title="Imagine">
+<div created="20200212174127022" modified="20200217121804649" tags="Music [[How many songs can you even invent at all]] [[The global village]]" title="Imagine">
 <pre>[img[pictures/imagine.jpg]]
 
 !!![[Coen Sisters]]:
@@ -9509,7 +9503,7 @@ Iris, the daughter of [[Eva]], is a glowing girl. She glows through the darkness
 
  &lt;&lt;heblink [[אירי וגורה]]&gt;&gt;</pre>
 </div>
-<div created="20200213162602188" modified="20200217121126032" tags="[[Iry and Gura]]" title="Iry claims">
+<div created="20200213162602188" modified="20200217121823195" tags="[[Iry and Gura]] [[The global village]]" title="Iry claims">
 <pre>[img[pictures/iri-toenet.jpg]]
 
 
@@ -9747,7 +9741,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
  &lt;&lt;heblink [[האחיות בלות]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212160436198" modified="20200212161924242" tags="[[True stories]] Films" title="Metafiction">
+<div created="20200212160436198" modified="20200217121902315" tags="[[True stories]] Films [[The global village]]" title="Metafiction">
 <pre>[img[pictures/meta-fiction.jpg]]
 
 
@@ -9777,7 +9771,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 
 </pre>
 </div>
-<div created="20200202190317522" modified="20200217121244735" tags="[[TV Series]] TV" title="Monkeys with car keys">
+<div created="20200202190317522" modified="20200217121326899" tags="[[TV Series]] TV [[The global village]]" title="Monkeys with car keys">
 <pre>[img[pictures/kofim-memunaim.jpg]]
 
 
@@ -9873,7 +9867,7 @@ In the years I've lived with [[Sheffy|Nano and I]] , she declared one day that [
 
  &lt;&lt;heblink [[חשיפה לצפון]]&gt;&gt;</pre>
 </div>
-<div created="20200212162303735" modified="20200212163646719" tags="[[True stories]] [[Monkeys with car keys]]" title="On the road to somewhere">
+<div created="20200212162303735" modified="20200217121937207" tags="[[True stories]] [[Monkeys with car keys]] [[The global village]]" title="On the road to somewhere">
 <pre>[img[pictures/baderech-lean.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[On the road to somewhere]]&quot;&gt;&gt;
@@ -10211,7 +10205,7 @@ And I say:
  &lt;&lt;heblink [[ביג לבובסקי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212155206056" modified="20200215180604957" tags="[[True stories]] [[On the road to somewhere]]" title="The blue is already here">
+<div created="20200212155206056" modified="20200217122016178" tags="[[True stories]] [[On the road to somewhere]] [[The global village]]" title="The blue is already here">
 <pre>[img[pictures/hacachol-cvar-can.jpg]]
 
 !!![[Yoyo]]:
