--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מערכת תל אביב]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -15393,7 +15393,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בקצה החלל הפתוח יש חדר אוכל צבעוני, גם בו נוהגים העובדים לשבת ולעבוד.</pre>
 </div>
-<div created="20181026164355462" modified="20200217161938836" tags="[[כאן בגטו]] [[מטא בדיון]]" title="מערכת תל אביב">
+<div created="20181026164355462" modified="20200217162223203" tags="[[כאן בגטו]] [[מטא בדיון]]" title="מערכת תל אביב">
 <pre>[img[pictures/maarechet-tel-aviv.jpg]]
 
 !!![[תומר]]:
